--- a/style/css_0/theme-grass.css
+++ b/style/css_0/theme-grass.css
@@ -5,11 +5,11 @@
 */
 
 /* Bright sky-blue/orange links. */
-@import url(links_bright.css);
+@import url(links-grass.css);
 
 /* We put the base header background on the body. */
 body {
-  background: #FFFFFF url(header-sand-bkg.png) repeat-x top left;
+  background: #FFFFFF url(header-grass-bg.png) repeat-x top left;
 }
 
 /* Heading, title and logo. */
@@ -17,24 +17,26 @@ body {
   color: #FFFFFF;
 }
 #heading {
-  background: transparent;
+  background: url(header-grass-fg.png) no-repeat top left;
   border: none;
   border-bottom: #000000 solid 1px;
 }
 #heading-logo {
-  width: 270px;
-  height: 90px;
-  background: url(header-sand-logo.png) no-repeat top left;
+  width: 236px;
+  height: 55px;
+  margin: 18px 0px 0px 24px;
 }
 
 /* Search box */
 #sidebar #search #search-text #q {
-  background-color: #ED982F;
-  color: #000000;
+  background-color: #6B9D68;
+  color: #FFFFFF;
+  font-weight: bold;
+  padding: 1px;
 }
 
 /* Markers on sidebar menus. */
 #sidebar #menu ul li h4 a {
-  border-left-color: #ED982F;
-  border-right-color: #ED982F;
+  border-left-color: #6B9D68;
+  border-right-color: #6B9D68;
 }
