--- a/style/trac-boost1.css
+++ b/style/trac-boost1.css
@@ -1,3 +1,68 @@
 /*
   Style sheet for customizing the Boost Trac at svn.boost.org
   */
+
+
+/*----------------------------------------------------------------------------
+                                   Table
+-----------------------------------------------------------------------------*/
+
+
+    table.wiki
+    {
+        width: 92%;
+        margin-left: 4%;
+        margin-right: 4%;
+    }
+
+    table.wiki tr th
+    {
+        margin: 2px;
+        margin-bottom: 8px;
+        padding: 0.5em;
+        padding-top: 10px;
+        padding-bottom: 0px;
+        background-color: #F8F8F8;
+        border: 1px solid #ECECEC;
+    }
+
+    table.wiki tr th p
+    {
+        font-size: 10pt;
+        text-align: center;
+        line-height: 1.2;
+        margin: 0;
+        padding: 0;
+        padding-bottom: 10px;
+    }
+
+    table.wiki tr td
+    {
+        margin: 2px;
+        padding: 0.5em;
+        padding-top: 10px;
+        padding-bottom: 0px;
+        background-color: white;
+        border: 1px solid #ECECEC;
+    }
+
+    table.wiki tr td p
+    {
+        text-align: left;
+        font-size: 10pt;
+        line-height: 1.2;
+        margin: 0;
+        padding: 0;
+        padding-bottom: 10px;
+    }
+
+    table.wiki:hover tr th
+    {
+        background-color: #E3F9E4;
+    }
+
+    table.wiki:hover tr td
+    {
+        background-color: #FAFFFB;
+    }
+
