--- a/style/trac-boost1.css
+++ b/style/trac-boost1.css
@@ -8,14 +8,14 @@
 -----------------------------------------------------------------------------*/
 
 
-    table.wiki
+    .wikipage table
     {
         width: 92%;
         margin-left: 4%;
         margin-right: 4%;
     }
 
-    table.wiki tr th
+    .wikipage table tr th
     {
         margin: 2px;
         margin-bottom: 8px;
@@ -26,7 +26,7 @@
         border: 1px solid #ECECEC;
     }
 
-    table.wiki tr th p
+    .wikipage table tr th p
     {
         font-size: 10pt;
         text-align: center;
@@ -36,7 +36,7 @@
         padding-bottom: 10px;
     }
 
-    table.wiki tr td
+    .wikipage table tr td
     {
         margin: 2px;
         padding: 0.5em;
@@ -46,7 +46,7 @@
         border: 1px solid #ECECEC;
     }
 
-    table.wiki tr td p
+    .wikipage table tr td p
     {
         text-align: left;
         font-size: 10pt;
@@ -56,12 +56,12 @@
         padding-bottom: 10px;
     }
 
-    table.wiki:hover tr th
+    .wikipage table:hover tr th
     {
         background-color: #E3F9E4;
     }
 
-    table.wiki:hover tr td
+    .wikipage table:hover tr td
     {
         background-color: #FAFFFB;
     }
