--- a/style/trac-boost1.css
+++ b/style/trac-boost1.css
@@ -13,6 +13,7 @@
         width: 92%;
         margin-left: 4%;
         margin-right: 4%;
+        border: 0px;
     }
 
     .wikipage table tr th
