Adjust variablelist style for latest boostbook table output.
[SVN r41471]

--- a/style/css_0/section-doc.css
+++ b/style/css_0/section-doc.css
@@ -196,6 +196,13 @@ li#doc-section-tab {
 #content .section table.table td p {
   margin: 0em;
 }
+#content .section .variablelist table {
+  margin: 0em;
+}
+#content .section .variablelist table th,
+#content .section .variablelist table td {
+  border: none !important;
+}
 /* #content .section .variablelist dl {
   margin: 0em 0em 0em 0em;
 }
