--- a/style/css_0/theme_grass/theme.css
+++ b/style/css_0/theme_grass/theme.css
@@ -61,6 +61,51 @@ body {
   padding: 1px;
 }
 
+/* Documentation icons, etc. */
+#content img.prev_image,
+#content img.prev_image_disabled,
+#content img.up_image,
+#content img.up_image_disabled,
+#content img.home_image,
+#content img.home_image_disabled,
+#content img.next_image,
+#content img.next_image_disabled
+{ width: 19px; height: 19px; }
+#content a img.prev_image { background: url(prev.png) no-repeat center center; }
+#content a img.up_image { background: url(up.png) no-repeat center center; }
+#content a img.home_image { background: url(home.png) no-repeat center center; }
+#content a img.next_image { background: url(next.png) no-repeat center center; }
+#content img.prev_image,
+#content img.prev_image_disabled { background: url(prev_disabled.png) no-repeat center center; }
+#content img.up_image,
+#content img.up_image_disabled { background: url(up_disabled.png) no-repeat center center; }
+#content img.next_image,
+#content img.next_image_disabled { background: url(next_disabled.png) no-repeat center center; }
+#content img.tip_image,
+#content img.note_image,
+#content img.warning_image,
+#content img.important_image,
+#content img.caution_image,
+#content img.sidebar_image,
+#content img.hint_image,
+#content img.alert_image
+{ width: 30px; height: 30px; float: left; clear: left; margin: 0em 0.5em 0.5em 0em; }
+#content img.tip_image { background: url(tip.png) no-repeat center center; }
+#content img.note_image { background: url(note.png) no-repeat center center; }
+#content img.warning_image { background: url(caution.png) no-repeat center center; }
+#content img.important_image { background: url(important.png) no-repeat center center; }
+#content img.caution_image { background: url(caution.png) no-repeat center center; }
+#content img.sidebar_image { background: url(note.png) no-repeat center center; }
+#content img.hint_image { background: url(tip.png) no-repeat center center; }
+#content img.alert_image { background: url(caution.png) no-repeat center center; }
+#content .section div.tip { background: url(tip.png) no-repeat 0.5em 0.5em !important; }
+#content .section div.note { background: url(note.png) no-repeat 0.5em 0.5em !important; }
+#content .section div.warning { background: url(caution.png) no-repeat 0.5em 0.5em !important; }
+#content .section div.important { background: url(important.png) no-repeat 0.5em 0.5em !important; }
+#content .section div.caution { background: url(caution.png) no-repeat 0.5em 0.5em !important; }
+#content .section div.sidebar { background: url(note.png) no-repeat 0.5em 0.5em !important; }
+#content .section div.hint { background: url(tip.png) no-repeat 0.5em 0.5em !important; }
+
 /* Footer */
 #footer {
   background: #FFFFFF url(footer-bg.png) repeat-x top left;
