Remove web styling from doc pages as some people are unhappy with the restyling of their docs. (fixes #1729, #2116)
[SVN r48762]

--- a/style/css_0/theme_grass/links.css
+++ b/style/css_0/theme_grass/links.css
@@ -6,8 +6,8 @@
 /* All about link/anchors ("A") elements. It's all here in one file
    to facilitate trying out multiple variants. And to help
    keep them consistent across all contexts. */
-a.internal,
-a.external {
+#content a.internal,
+#content a.external {
   text-decoration: none;
   color: #000000;
 }
@@ -107,18 +107,18 @@ a.external {
 }
 
 /* The special "Get Boost" button. */
-#get-boost a {
+#body #get-boost a {
   color: #2070A0;
 }
-#get-boost a span.link {
+#body #get-boost a span.link {
   color: #EEEEEE;
   display: none;
 }
-#get-boost a:hover {
+#body #get-boost a:hover {
   color: #6B9D68;
   background-color: #EEEEEE;
 }
-#get-boost a:hover span.link {
+#body #get-boost a:hover span.link {
   color: #6B9D68;
 }
 
