--- a/style/css_0/section-basic.css
+++ b/style/css_0/section-basic.css
@@ -3,7 +3,7 @@
   Distributed under the Boost Software License, Version 1.0.
   (See accompanying file LICENSE_1_0.txt or http://www.boost.org/LICENSE_1_0.txt)
 */
-@import url(theme_grass/theme.css);
+@import url(theme_grass/header.css);
 /* Heading, title and logo. */
 #boost-common-heading-doc {
   position: absolute;
