--- a/style/css_0/header.css
+++ b/style/css_0/header.css
@@ -1,9 +1,18 @@
 /*
-  Copyright 2005 Redshift Software, Inc.
+  Copyright 2005-2008 Redshift Software, Inc.
   Distributed under the Boost Software License, Version 1.0.
   (See accompanying file LICENSE_1_0.txt or http://www.boost.org/LICENSE_1_0.txt)
 */
 /* Heading, title and logo. */
+#boost-common-heading-doc {
+  position: absolute;
+  left: 0;
+  top: 0;
+  margin: 0em;
+  height: 100px;
+  width: 100%;
+  overflow: hidden;
+}
 #heading * {
   color: #FFFFFF;
 }
@@ -11,6 +20,9 @@
   margin: 0em;
   background: #A1A1A1;
   border-bottom: #000000 solid 1px;
+  height: 100px;
+}
+#boost-common-heading-doc-spacer {
   height: 100px;
 }
 #heading-placard {
