Website: Add note about links to 'in progress' releases.
[SVN r75343]

--- a/site-tools/templates/entry-template.html
+++ b/site-tools/templates/entry-template.html
@@ -46,7 +46,10 @@ ${
             <div class="section-title">
               <h1>${ emit(full_title_xml) }$</h1>
             </div>
-
+${
+if page.type == 'release' and 'released' not in page.flags:
+    emit('<div class="section-note"><p>Note: This release is still in progress. Some of the documentation links may not work yet.</p></div>\n');
+}$
             <div class="section-body">
               <h2><span class=
               "news-title">${ emit(page.title_xml) }$</span></h2>
