Website: Remove link warning from beta stage.
[SVN r75376]

--- a/site-tools/templates/entry-template.html
+++ b/site-tools/templates/entry-template.html
@@ -47,7 +47,7 @@ ${
               <h1>${ emit(full_title_xml) }$</h1>
             </div>
 ${
-if page.type == 'release' and 'released' not in page.flags:
+if page.type == 'release' and 'released' not in page.flags and 'beta' not in page.flags:
     emit('<div class="section-note"><p>Note: This release is still in progress. Some of the documentation links may not work yet.</p></div>\n');
 }$
             <div class="section-body">
