Website: Tweak the beta release notes.
[SVN r75377]

--- a/site-tools/templates/entry-template.html
+++ b/site-tools/templates/entry-template.html
@@ -2,8 +2,8 @@ ${
 full_title_xml = page.title_xml
 
 if page.type == 'release':
-    if ('beta' in page.flags): full_title_xml = 'Beta release: ' + full_title_xml
-    elif ('released' not in page.flags): full_title_xml = 'In Progress: ' + full_title_xml
+    if ('beta' in page.flags): full_title_xml = full_title_xml + ' beta release'
+    elif ('released' not in page.flags): full_title_xml = full_title_xml + ' work in progress'
 
 }$<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
