--- a/site-tools/templates/entry-template.html
+++ b/site-tools/templates/entry-template.html
@@ -1,9 +1,16 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+${
+full_title_xml = page.title_xml
+
+if page.type == 'release':
+    if ('beta' in page.flags): full_title_xml = full_title_xml + ' beta release'
+    elif ('released' not in page.flags): full_title_xml = full_title_xml + ' work in progress'
+
+}$<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-  <title>${ emit(page.title_xml) }$</title>
+  <title>${ emit(full_title_xml) }$</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
   <link rel="stylesheet" type="text/css" href="/style-v2/section-boost.css" />
@@ -37,16 +44,22 @@ ${
         <div class="section" id="intro">
           <div class="section-0">
             <div class="section-title">
-              <h1>${ emit(page.title_xml) }$</h1>
+              <h1>${ emit(full_title_xml) }$</h1>
             </div>
-
+${
+if page.type == 'release' and 'released' not in page.flags and 'beta' not in page.flags:
+    emit('<div class="section-note"><p>Note: This release is still in progress. Some of the documentation links may not work yet.</p></div>\n');
+}$
             <div class="section-body">
               <h2><span class=
               "news-title">${ emit(page.title_xml) }$</span></h2>
 
               <p><span class=
               "news-date">${ emit(page.web_date()) }$</span></p>
-
+${
+# TODO: Should encode this link. Although not a real problem.
+if (page.documentation): emit('<p><a href="' + page.documentation + '">Documentation</a>')
+}$
               ${ emit(page.download_table()) }$
               <div class="news-description">
                 <div class="description">${ emit(page.description_xml) }$</div>              </div>
