Website: Add documentation link to download page.
[SVN r75656]

--- a/site-tools/templates/download-template.html
+++ b/site-tools/templates/download-template.html
@@ -56,6 +56,10 @@ for x in downloads:
             emit('\n')
             emit('                <li>\n')
             emit('                <a href="%s">Download</a></li>' % entry.download_item)
+        if(entry.documentation):
+            emit('\n')
+            emit('                <li>\n')
+            emit('                <a href="%s">Documentation</a></li>' % entry.documentation)
         emit('\n')
         emit('              </ul>')
 }$
