Website: Create page for new version.
[SVN r75675]

--- a/site-tools/templates/entry-template.html
+++ b/site-tools/templates/entry-template.html
@@ -2,8 +2,8 @@ ${
 full_title_xml = page.title_xml
 
 if page.type == 'release':
-    if ('beta' in page.flags): full_title_xml = full_title_xml + ' beta release'
-    elif ('released' not in page.flags): full_title_xml = full_title_xml + ' work in progress'
+    if ('beta' in page.flags): full_title_xml = full_title_xml + ' - beta release'
+    elif ('released' not in page.flags): full_title_xml = full_title_xml + ' - work in progress'
 
 }$<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
@@ -48,7 +48,7 @@ ${
             </div>
 ${
 if page.type == 'release' and 'released' not in page.flags and 'beta' not in page.flags:
-    emit('<div class="section-note"><p>Note: This release is still in progress. Some of the documentation links may not work yet.</p></div>\n');
+    emit('<div class="section-note"><p>Note: This version is at an early stage in its release cycle. The information listed below is incomplete and some of the documentation links may not work yet.</p></div>\n');
 }$
             <div class="section-body">
               <h2><span class=
