Website: Keep the css for hiding the heading menu.
While it was removed from most pages, it still remains in some the static
pages, such as the pages used to overwrite errors in the documentation.


[SVN r75805]

--- a/style-v2/css_0/header.css
+++ b/style-v2/css_0/header.css
@@ -80,3 +80,25 @@
   font-size: 85%;
   display: block;
 }
+#boost-common-heading-doc .heading-sections,
+#heading .heading-sections {
+  display: none;
+}
+#boost-common-heading-doc .heading-search,
+#heading .heading-search {
+  display: none;
+  text-align: right;
+  padding: 0em 1.5em 0em 0em;
+}
+#boost-common-heading-doc .heading-search #search-text .q,
+#heading .heading-search #search-text .q {
+  background: transparent;
+  border: none;
+  border-bottom: 1px #BBBBBB solid;
+  margin-right: 0.25em;
+  font-size: 90%;
+}
+#boost-common-heading-doc .heading-search #search-text #q:hover,
+#heading .heading-search #search-text #q:hover {
+  border-bottom: 1px #FFFFFF solid;
+}
