Website: Make it a little clearer that it's a beta on the home page.
[SVN r76748]

--- a/site-tools/templates/index-src.html
+++ b/site-tools/templates/index-src.html
@@ -16,6 +16,8 @@ for x in downloads:
         if entry.download_item:
             emit('<a href="%s">' % entry.download_item)
         emit(entry.title_xml)
+        if ('beta' in entry.flags):
+            emit(' - beta release')
         if entry.download_item:
             emit('</a>')
         emit(' (<a href="/%s">release notes</a>)</span>' % (entry.location))
