Website: Improved version display.
[SVN r76758]

--- a/site-tools/templates/download-template.html
+++ b/site-tools/templates/download-template.html
@@ -44,7 +44,7 @@ for x in downloads:
     emit('<h2 id="%s">%s</h2>' % (x['anchor'], x['label']))
     for entry in x['entries']:
         emit('\n')
-        emit('              <h3><span class=\n              "news-title">%s</span></h3>\n\n' % entry.title_xml)
+        emit('              <h3><span class=\n              "news-title">%s</span></h3>\n\n' % entry.full_title_xml)
         emit('              <p class="news-date">%s</p>\n\n' % entry.web_date())
         emit('              <p class="news-description">\n')
         emit('              <span class="brief"><span class="purpose">%s</span></span></p>\n\n' % entry.purpose_xml)
