Website: Include warning in beta notes.
[SVN r76760]

--- a/site-tools/templates/entry-template.html
+++ b/site-tools/templates/entry-template.html
@@ -40,7 +40,7 @@ ${
               <h1>${ emit(page.title_xml) }$</h1>
             </div>
 ${
-if page.type == 'release' and 'released' not in page.flags and 'beta' not in page.flags:
+if page.type == 'release' and 'released' not in page.flags:
     emit('<div class="section-note"><p>Note: This version is at an early stage in its release cycle. The information listed below is incomplete and some of the documentation links may not work yet.</p></div>\n');
 }$
             <div class="section-body">
