--- a/site-tools/templates/history-template.html
+++ b/site-tools/templates/history-template.html
@@ -1,19 +1,21 @@
 ${
+from boost_site.util import htmlencode
+
 title = 'Boost Version History'
 entries = pages.match_pages(['feed/history/*.qbk|released'])
 }$            <div class="section-body">
               ${
 for entry in entries:
     emit('\n')
-    emit('              <h2 class="news-title">\n              <a name="i%s" id="i%s"></a><a href="/%s">%s</a></h2>\n\n' % (entry.id, entry.id, entry.location, entry.title_xml))
+    emit('              <h2 class="news-title">\n              <a name="i%s" id="i%s"></a><a href="/%s">%s</a></h2>\n\n' % (entry.id, entry.id, htmlencode(entry.location), entry.title_xml))
     emit('              <p class="news-date">%s</p>\n\n' % (entry.web_date()))
     emit('              <div class="news-description">\n')
     emit('                <span class="brief"><span class="purpose">%s</span></span>' % (entry.purpose_xml))
     emit('              </div>\n\n')
     emit('              <ul class="menu">\n')
     emit('                <li>\n')
-    emit('                <a href="/%s">Details</a></li>\n\n' % (entry.location))
+    emit('                <a href="/%s">Details</a></li>\n\n' % (htmlencode(entry.location)))
     if(entry.download_item):
-        emit('                                <li><a href="%s">Download</a></li>\n' % (entry.download_item))
+        emit('                                <li><a href="%s">Download</a></li>\n' % (htmlencode(entry.download_item)))
     emit('                              </ul>')
 }$            </div>
