--- a/site-tools/templates/index-src.html
+++ b/site-tools/templates/index-src.html
@@ -1,28 +1,31 @@
 ${
+from boost_site.util import htmlencode
+
 # TODO: This is duplicated from other places, should only be set once?
 news = pages.match_pages(['feed/news/*.qbk', 'feed/history/*.qbk|released'], 3)
 }$
                 <div class="directory-item" id="important-downloads">
                   <h2>Downloads</h2>
+                  <div id="downloads">
 
 ${
 for x in downloads:
     label = x['label']
     entries = x['entries']
     emit('<h3>%s</h3>\n' % label)
-    emit('<ul id="downloads">\n')
+    emit('<ul>\n')
     for entry in entries:
         emit('<li><span class="news-title">')
         if entry.download_item:
-            emit('<a href="%s">' % entry.download_item)
+            emit('<a href="%s">' % htmlencode(entry.download_item))
         emit(entry.full_title_xml)
         if entry.download_item:
             emit('</a>')
-        emit(' (<a href="/%s">release notes</a>)</span>' % (entry.location))
+        emit(' (<a href="/%s">release notes</a>)</span>' % (htmlencode(entry.location)))
         emit('<span class="news-date">%s</span></li>\n' % (entry.web_date()))
     emit('</ul>')
 }$
-
+                  </div>
                   <p><a href="/users/download/">More Downloads...</a>
                   (<a href="feed/downloads.rss">RSS</a>)</p>
                 </div>
@@ -34,7 +37,7 @@ for x in downloads:
                     ${
 for entry in news:
     emit('\n')
-    emit('                    <li><span class=\n                    "news-title"><a href="/%s">%s</a></span>\n' % (entry.location, entry.full_title_xml))
+    emit('                    <li><span class=\n                    "news-title"><a href="/%s">%s</a></span>\n' % (htmlencode(entry.location), entry.full_title_xml))
     emit('                    <span class=\n                    "news-description"><span class="brief"><span class="purpose">%s</span></span></span>\n' % entry.purpose_xml)
     emit('                    <span class=\n                    "news-date">%s</span></li>' % (entry.web_date()))
 }$                  </ul>
@@ -44,4 +47,3 @@ for entry in news:
                 </div>
 
                 <div class="clear"></div>
-              </div>
