--- a/site-tools/templates/news-template.html
+++ b/site-tools/templates/news-template.html
@@ -1,4 +1,6 @@
 ${
+from boost_site.util import htmlencode
+
 entries = pages.match_pages(['feed/news/*.qbk', 'feed/history/*.qbk|released'], 5)
 }$            <div class="section-body">
               ${
@@ -6,12 +8,12 @@ emit('<ul class="toc">\n')
 emit('                ')
 for entry in entries:
     emit('\n')
-    emit('                <li><span class=\n                "news-title"><a href="#i%s">%s</a></span></li>' % (entry.id, entry.title_xml))
+    emit('                <li><span class=\n                "news-title"><a href="#i%s">%s</a></span></li>' % (htmlencode(entry.id), entry.title_xml))
 emit('              </ul>')
 for entry in entries:
     emit('\n')
     emit('              <h2 class="news-title">\n')
-    emit('              <a name="i%s" id="i%s"></a><a href="/%s">%s</a>' % (entry.id, entry.id, entry.location, entry.title_xml))
+    emit('              <a name="i%s" id="i%s"></a><a href="/%s">%s</a>' % (entry.id, entry.id, htmlencode(entry.location), entry.title_xml))
     emit('</h2>\n\n')
     emit('              <p class="news-date">%s</p>\n\n' % (entry.web_date()))
     emit('              <div class="news-description">\n')
@@ -19,9 +21,9 @@ for entry in entries:
     emit('              </div>\n\n')
     emit('              <ul class="menu">\n')
     emit('                <li>\n')
-    emit('                <a href="/%s">Details</a></li>' % entry.location)
+    emit('                <a href="/%s">Details</a></li>' % htmlencode(entry.location))
     if(entry.download_item):
         emit('\n\n')
-        emit('                                <li><a href="%s">Download</a></li>' % entry.download_item)
+        emit('                                <li><a href="%s">Download</a></li>' % htmlencode(entry.download_item))
     emit('\n                              </ul>')
 }$            </div>
