--- a/style-v2/css_0/section-welcome.css
+++ b/style-v2/css_0/section-welcome.css
@@ -36,12 +36,13 @@ li#welcome-section-tab {
 }
 #news .news-title {
   display: block;
+  margin-bottom: 0.2em;
 }
 #news .news-description {
   display: block;
   padding: 0.25em 0em 0.25em 0em;
 }
-#news .news-date {
+#news.news-links, #news .news-date {
   display: block;
   padding: 0em 0em 0.5em 0em;
   color: #777;
