--- a/doc/libs/common/doc/src/boostbook.css
+++ b/doc/libs/common/doc/src/boostbook.css
@@ -205,7 +205,7 @@
     Table of contents
 =============================================================================*/
 
-    .toc
+    div.toc
     {
        margin: 1pc 4% 0pc 4%;
        padding: 0.1pc 1pc 0.1pc 1pc;
@@ -466,7 +466,7 @@
         }
 
     /* Table of contents */
-        .toc
+        div.toc
         {
             border: 1px solid #DCDCDC;
         }
@@ -534,7 +534,7 @@
         }
 
     /* Table of contents */
-        .toc
+        div.toc
         {
             border: 1px solid gray;
         }
@@ -608,4 +608,39 @@ sup {
 sub {
 	top: .5ex;
 }
+
+/*==============================================================================
+    Indexes: pretty much the same as the TOC.
+==============================================================================*/
+
+    .index
+    {
+       font-size: 80%;
+       padding-top: 0px;
+       padding-bottom: 0px;
+       margin-top: 0px;
+       margin-bottom: 0px;
+       margin-left: 0px;
+    }
+
+    .index ul
+    {
+       padding-left: 3em;
+    }
+
+    .index p
+    {
+       padding: 2px;
+       margin: 2px;
+    }
+
+    .index-entry-level-0
+    {
+        font-weight: bold;
+    }
+
+    .index em
+    {
+        font-weight: bold;
+    }
 
