--- a/doc/libs/common/doc/src/docutils.css
+++ b/doc/libs/common/doc/src/docutils.css
@@ -1,8 +1,8 @@
 /*
 :Author: David Goodger
 :Contact: goodger@python.org
-:Date: $Date$
-:Revision: $Revision$
+:Date: $Date: 2007-11-25 19:34:32 +0000 (Sun, 25 Nov 2007) $
+:Revision: $Revision: 41371 $
 :Copyright: This stylesheet has been placed in the public domain.
 
 Default cascading style sheet for the HTML output of Docutils.
