Added donate feature to website.

--- a/style-v2/css_0/sidebar.css
+++ b/style-v2/css_0/sidebar.css
@@ -33,6 +33,11 @@
 }
 #sidebar #menu ul li {
 }
+#sidebar #menu ul li #donatelink {
+  width: 147px;
+  margin-left: auto;
+  margin-right: auto;
+}
 #sidebar #menu ul li h4 {
   font-family: "Times New Roman",serif;
   font-variant: small-caps;
