--- a/development/template/template.html
+++ b/development/template/template.html
@@ -6,8 +6,8 @@
   <title>Boost C++ Libraries</title>
   <meta http-equiv="Content-Type" content="text/html; charset=us-ascii" />
   <link rel="icon" href="/favicon.ico" type="image/ico" />
-  <link rel="stylesheet" type="text/css" href="/style/section-welcome.css" />
-  <!--[if IE]> <style type="text/css"> body { behavior: url(/style/csshover.htc); } </style> <![endif]-->
+  <link rel="stylesheet" type="text/css" href="/style-v2/section-welcome.css" />
+  <!--[if IE]> <style type="text/css"> body { behavior: url(/style-v2/csshover.htc); } </style> <![endif]-->
 </head>
 
 <body>
