Take the donate button out of the sidebar menu.

--- a/style-v2/css_0/sidebar.css
+++ b/style-v2/css_0/sidebar.css
@@ -33,11 +33,6 @@
 }
 #sidebar #menu ul li {
 }
-#sidebar #menu ul li #donatelink {
-  width: 147px;
-  margin-left: auto;
-  margin-right: auto;
-}
 #sidebar #menu ul li h4 {
   font-family: "Times New Roman",serif;
   font-variant: small-caps;
@@ -130,4 +125,10 @@
   width: 150px;
   height: 145px;
   background: #FFFFFF url(get-boost.png) no-repeat center center;
+}
+/* Donate button */
+#donatelink {
+  width: 147px;
+  margin-left: auto;
+  margin-right: auto;
 }
