--- a/common/code/templates/libraries.htm
+++ b/common/code/templates/libraries.htm
@@ -12,6 +12,7 @@ content="text/html; charset=iso-8859-1">
 </head>
 
 <body bgcolor="#FFFFFF" text="#000000">
+  {{! This is a template used to generate the library list in the release. }}
 
   <table border="0" cellpadding="5" cellspacing="0" style="border-collapse: collapse" bordercolor="#111111">
     <tr>
