Make the note on release notes a bit clearer.

--- a/style-v2/css_0/content.css
+++ b/style-v2/css_0/content.css
@@ -26,6 +26,12 @@
 }
 #content .section-title {
 }
+#content .section-alert {
+    border: 1px solid #aa5;
+    background: #ffc;
+    color: #000;
+    padding: 0.5em 1em 0 1em;
+}
 /* Uniformly color everything that's a heading */
 #content h1, #content h2, #content h3, #content h4, #content h5, #content h6 {
   margin: 0em;
