Move asciidoctor header css into main css file

--- a/style-v2/css_0/header.css
+++ b/style-v2/css_0/header.css
@@ -14,8 +14,15 @@
   left: 0;
   top: 0;
 }
+body.boost-asciidoctor {
+    position: static;
+}
+
 #boost-common-heading-doc-spacer {
   height: 100px;
+}
+body.boost-asciidoctor #boost-common-heading-doc-spacer {
+  display: none;
 }
 
 #boost-common-heading-doc,
