Tweak the notice position

--- a/style-v2/css_0/header.css
+++ b/style-v2/css_0/header.css
@@ -135,10 +135,10 @@ a.boost-common-header-inner:hover {
     .boost-common-header-notice {
         position: absolute;
         top: 10px;
-        left: 300px;
         max-width: 400px;
-        max-height: 66px;
+        max-height: 80px;
         overflow: hidden;
         box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
+        margin-left: 300px;
     }
 }
