Add solid background to sidebar
On a narrow screen, the download table can go under the sidebar, so add
a solid background so that it doesn't get mixed up. I wasn't sure if
this should go in siderbar.css, or in the theme css files, but since
the page contents always seem to be in black on white, I put it in
sidebar.css

--- a/style-v2/css_0/sidebar.css
+++ b/style-v2/css_0/sidebar.css
@@ -7,6 +7,8 @@
   float: right;
   vertical-align: top;
   padding: 1.5em 1.5em 1.5em 0em;
+  background: #fff;
+  color: #000;
 }
 #sidebar #menu {
   width: 16em;
