Fix asciidoctor heading

--- a/style-v2/css_0/header.css
+++ b/style-v2/css_0/header.css
@@ -14,7 +14,7 @@
   left: 0;
   top: 0;
 }
-body.boost-asciidoctor {
+body.boost-asciidoctor #boost-common-heading-doc {
     position: static;
 }
 
