--- a/style-v2/section-basic.css
+++ b/style-v2/section-basic.css
@@ -5,3 +5,25 @@
 */
 @import url(css_0/header.css);
 @import url(css_0/theme_grass/header.css);
+
+pre, div.toc
+{
+    overflow: auto;
+}
+
+div.note table,
+div.tip table,
+div.important table,
+div.caution table,
+div.warning table,
+div.blurb table
+{
+    table-layout: fixed;
+    width: 100%;
+    overflow-wrap: break-word;
+}
+
+span.inlinemediaobject img
+{
+    max-width: 100%;
+}
