Hide heading quote on small devices

--- a/style-v2/css_0/header.css
+++ b/style-v2/css_0/header.css
@@ -87,6 +87,11 @@ body.boost-asciidoctor #boost-common-heading-doc-spacer {
   font-size: 85%;
   display: block;
 }
+@media (max-device-width: 480px) {
+  .heading-quote {
+    display: none;
+  }
+}
 #boost-common-heading-doc .heading-sections,
 #heading .heading-sections {
   display: none;
